# Cursovaya-OOP

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: API.py  Vacancies.py  save_files.py
tests/: test_API.py  test_Vacancies.py  test_save_files.py
